Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
 </li>
 </ol><h2>Plugin development</h2>
 
-<p><em>Documentation coming</em>. See <code>plugin_template.rb</code> to get started.</p>
+<p><em>More documentation coming</em>. See <code>plugin_template.rb</code> to get started.</p>
+
+<p>If you want to edit an existing plugin to change parameters or output, move the original to <code>plugins_disabled</code> and make a copy with a new name in <code>plugins</code>. It will make it easier to update in the future without losing your changes.</p>
 
 <h2>Todo</h2>
 
