--- a/index.html
+++ b/index.html
@@ -99,9 +99,16 @@ Usage: slogger [-dq] [-r X] [/path/to/image.jpg]
     -t, --timespan DAYS              Days of history to collect
     -q, --quiet                      Run quietly (no notifications/messages)
     -r, --retries COUNT              Maximum number of retries per plugin (int)
+    -s, --since-last                 Set the timespan to the last run date
     -v, --version                    Display the version number
     -h, --help                       Display this screen
 </code></pre>
+
+<blockquote>
+<p><strong>Note:</strong> You can use the <code>-s</code> option to only log since the last run date, handy if you want to run Slogger more than once per day or are testing plugins. </p>
+
+<p>You can also use <code>-o</code> to run only a certain plugin in the standard plugin directory: just provide it with enough of the name to be unique, e.g. <code>slogger -o gist</code>.</p>
+</blockquote>
 
 <h2>Plugin development</h2>
 
