Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
       </header>
       <section>
-        <p>Support Slogger by contributing to </p>
+        <p>Support Slogger by contributing to my <a href="https://www.gittip.com/ttscoff/">GitTip fund</a>.</p>
 
 <h2>Upgrade Note</h2>
 
