Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -49,17 +49,80 @@
 <li>Default plugins:
 
 <ul>
-<li> Gist (gists created in the last 24 hours. Title and description only, logged as a single digest)</li>
-<li> Flickr (images uploaded in the last 24 hours, each as an individual post. Can handle multiple accounts)</li>
-<li> Last.fm (Scrobbled songs for the current day)</li>
-<li> Blog entries (designed to pull in your blog posts with leading image and excerpt (optionally markdownified). Handles multiple feeds)</li>
-<li> RSS Feeds (logs any feed entries for the given timespan as a digest entry, handles multiple feeds)</li>
-<li> Twitter (Tweets and Favorites for the day as digest entries, handles multiple Twitter accounts)</li>
-<li> Instapaper (Unread and/or individual folders)</li>
-<li> Foursquare (Checkins for the day)</li>
-<li> Pinboard (Daily digest with descriptions and option for tags)</li>
-<li> Pocket (Digest list of links, read and unread, posted to Pocket)</li>
-<li> Goodreads books marked read for the day, one entry each with book cover image, ratings and your review. Inserted at the date marked finished.</li>
+<li> Github
+
+<ul>
+<li> new plugin, supercedes Gist logger. </li>
+<li> Logs push, watch and gist activity</li>
+</ul>
+</li>
+<li> Flickr
+
+<ul>
+<li>images uploaded in the last 24 hours, each as an individual post</li>
+<li>Can handle multiple accounts</li>
+</ul>
+</li>
+<li> Last.fm 
+
+<ul>
+<li>Scrobbled songs for the current day</li>
+<li><em>updated to grab more songs</em></li>
+</ul>
+</li>
+<li> Blog entries
+
+<ul>
+<li> designed to pull in your blog posts with leading image and excerpt (optionally markdownified). </li>
+<li> Handles multiple feeds</li>
+</ul>
+</li>
+<li> RSS Feeds
+
+<ul>
+<li> logs any feed entries for the given timespan as a digest entry</li>
+<li> handles multiple feeds</li>
+</ul>
+</li>
+<li> Twitter
+
+<ul>
+<li> Tweets and Favorites for the day as digest entries</li>
+<li> handles multiple Twitter accounts</li>
+</ul>
+</li>
+<li> Instapaper
+
+<ul>
+<li> Unread and/or individual folders</li>
+</ul>
+</li>
+<li> Foursquare 
+
+<ul>
+<li> Checkins for the day</li>
+</ul>
+</li>
+<li> Pinboard 
+
+<ul>
+<li> Daily digest with descriptions</li>
+<li> optionally include bookmark tags in entry</li>
+</ul>
+</li>
+<li> Pocket
+
+<ul>
+<li> Digest list of links---read and unread---posted to Pocket</li>
+</ul>
+</li>
+<li> Goodreads 
+
+<ul>
+<li> books marked read for the day, one entry each with book cover image, ratings and your review. </li>
+<li> Inserted at the date marked finished.</li>
+</ul>
+</li>
 <li> App.net</li>
 </ul>
 </li>
