Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -135,6 +135,22 @@
 </li>
 </ul>
 </li>
+<li>There are additional plugins in the default "plugins_disabled" folder. They can be enabled by copying them to your "plugins" folder.
+
+<ul>
+<li>These are typically disabled by default because they require advanced setup or have limited use for most users. Read the headers in each plugin file for additional details.</li>
+<li>Some of the additional plugins available:
+
+<ul>
+<li>GetGlue</li>
+<li>Google Analytics (advanced setup)</li>
+<li>Gist</li>
+<li>SoundCloud</li>
+<li>Strava</li>
+</ul>
+</li>
+</ul>
+</li>
 <li>Slogger can be called with a single argument that is a path to a local image or text file, and an entry will be created containing its contents.
 
 <ul>
